# huiz

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/: Cargo.toml  build.rs  create-xcframework.sh
bindings/ffi/: Cargo.toml  build.rs  uniffi.toml
bindings/ffi/src/: Huiz.swift  HuizFFI.h  HuizFFI.modulemap  huiz.udl  lib.rs
bindings/src/: huiz_ffi.udl  lib.rs
bindings/uniffi-bindgen/: Cargo.toml
examples/simple-query/: Cargo.toml
examples/simple-query/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: data.rs  error.rs  legacy.rs  lib.rs  utils.rs
src/: lib.rs  strings_to_hide.rs  whois_freebsd.rs
