[package]
authors = ["PT"]
edition = "2021"
homepage = "https://github.com/namecare/huiz"
repository = "https://github.com/namecare/huiz"
description = "Swift bindings for Huiz"
license_file = "../../LICENSE"
name = "huiz-ffi"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.24.1" }
huiz = { path = "../../lib/" }

[build-dependencies]
uniffi = { version = "0.24.1", features = [ "build" ] }

